# mallard

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dprint.json
.devcontainer/: Dockerfile  devcontainer.json  install_github_cli.sh  install_opencode.sh  post_create.sh  setup_git_ssh.sh
.github/workflows/: ci.yml  release.yml
docs/: mallard-design.md  releasing.md
scripts/: install.sh  package-release.sh
src/: commit.rs  compiler.rs  config.rs  current_migration.rs  db_files.rs  hooks.rs  main.rs  migrate.rs  migration_files.rs  migration_hash.rs  migration_state.rs  project.rs  reset.rs  run_current.rs  status.rs  uncommit.rs  watch.rs
