[package]
name = "mallard"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Forward-only DuckDB schema migration CLI"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jcgsville/mallard"
homepage = "https://github.com/jcgsville/mallard"
keywords = ["duckdb", "migrations", "schema", "cli"]
categories = ["command-line-utilities", "database"]
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.60", features = ["derive"] }
duckdb = { version = "1.4.4", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.9.7"

[dev-dependencies]
tempfile = "3.23.0"
